# Savo_LLM_Server

./: .gitignore  README.md
llm_server/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
llm_server/app/: main.py
llm_server/app/core/: config.py  generate.py  intent.py  map_lookup.py  pipeline.py  safety.py  tools_web.py  types.py
llm_server/app/map_data/: known_locations.json
llm_server/app/models/: chat_request.py  chat_response.py  location_model.py  nav_state_model.py  robot_status_model.py
llm_server/app/prompts/: chatbot_prompt.txt  navigation_prompt.txt  status_prompt.txt  style_guidelines.txt  system_prompt.txt
llm_server/app/providers/: tier1_online.py  tier2_local.py  tier3_pi.py
llm_server/app/routers/: chat.py  map.py  status.py  ws.py
llm_server/app/runtime_state/: __init__.py  sessions.json  sessions.py
llm_server/app/utils/: __init__.py  file_io.py  logging.py  timers.py
llm_server/tools/dev/: ws_chat_client.py
